--- a/config/locales/responders.ja.yml
+++ b/config/locales/responders.ja.yml
@@ -3,7 +3,7 @@ ja:
     actions:
       create:
         notice: '%{resource_name} を作成しました'
-        notice: '%{resource_name} の作成に失敗しました'
+        alert: '%{resource_name} の作成に失敗しました'
       update:
         notice: '%{resource_name} を更新しました'
         alert: '%{resource_name} を更新できませんでした'
